# eventtune

./: .firebaserc  .gitignore  .mcp.json  LICENSE  README.md  firebase.json  firestore.indexes.json  firestore.rules  storage.rules
.github/workflows/: ci.yml  deploy-backend.yml  deploy.yml
backend/: .env.example  Dockerfile  config.py  contents.py  contents_library.py  dependencies.py  genai_client.py  jobs.py  legal.py  main.py  metering.py  ontology.py  plans.py  pyproject.toml  segmentation.py  semantic_search.py  space.py  space_data.py  test_entity_resolver.py  test_ingestion_pipeline.py  test_marketing_agent.py  test_ontology_mapper.py  thread_store.py
backend/agents/: confirmation_intent.py  data_integration_agent.py  execution_agent.py  ingestion_agent.py  marketing_agent.py  message_generator.py  ontology_mapper.py
backend/ingestion/: __init__.py  engine.py  normalize.py  prompts.py  readers.py  specs.py
backend/routers/: data.py  events.py  execute.py  generate.py  ingest.py  integration.py  marketing.py  segments.py  spaces.py  threads.py  users.py
backend/scripts/: provision_agent_engine.py  reset_space_ingestion_data.py  seed_demo_space.py
backend/semantic/: osi_event_marketing_v1.yml
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_boundary.py  test_data_api.py  test_integration_upload.py  test_marketing_segment_patterns.py  test_marketing_sse.py  test_spaces_api.py  test_thread_store_bridge.py
backend/tests/unit/: fakes.py  test_data_enrich.py  test_entity_resolver.py  test_ingestion_pipeline.py  test_ingestion_readers.py  test_ingestion_specs.py  test_ingestion_title.py  test_interpret_engine.py  test_marketing_agent.py  test_normalize.py  test_ontology_mapper.py  test_thread_store.py
docs/: ADR.md  EVENTTUNE_MIGRATION.md  INFRA_ARCHITECTURE.md  INGESTION_MAPPING.md  MARKETING_PHILOSOPHY.md  PHILOSOPHY_AND_NAMING.md  PM.md  SEMANTIC_LAYER.md  SOFTWARE_ARCHITECTURE.md  TESTING.md
docs/2026-07-02-Fableレビュー/: CAPABILITY_MAP.md  CURRENT_ISSUES.md  MESSAGING_EVENTWEAVE.md  POSITIONING.md  PRODUCT_INTRODUCTION.md  ROADMAP_PROPOSAL.md  STRATEGIC_SCOPE.md  TECHNICAL_APPEAL.md
docs/2026-07-02_レビュー/: MESSAGING_EVENTTUNE.md  MESSAGING_EVENTWEAVE.md  NAMING_PROPOSAL.md  POSITIONING.md  PRODUCT_INTRODUCTION.md  TECHNICAL_APPEAL.md
docs/2026-07-11_レビュー/: CAPABILITY_MAP.md  CURRENT_ISSUES.md  MESSAGING_EVENTTUNE.md  NAMING_PROPOSAL.md  POSITIONING.md  PRODUCT_INTRODUCTION.md  ROADMAP_PROPOSAL.md  STRATEGIC_SCOPE.md  TECHNICAL_APPEAL.md
frontend/: .env.local.example  apphosting.yaml  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  tailwind.config.ts  trigger-build.txt  tsconfig.tsbuildinfo  vitest.config.mts
sample_data/: annual_plan_2026.txt  content_catalog.txt  hubspot_contacts_export_SaaSGrowthConferenceJapan2026.csv  manufacturing_dx_event_leads.csv  multi_event_leads_2025.csv  output.csv  product_catalog.txt  q4_2025_costs.csv
(+113 files in other folders)
