[project]
name = "marketing-mail-generator-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "firebase-admin>=6.7.0",
    "google-adk>=1.3.0",
    "google-genai>=1.16.0",
    "google-cloud-storage>=3.0.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
